Updated dependencies in pom.xml