@@ -4,13 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mastercard.developers</groupId>
     <artifactId>elevate-accelerator</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
+    <packaging>jar</packaging>
     <name>elevate-accelerator</name>
     <description>Elevate Accelerator Reference Application</description>
 
     <properties>
-        <java.version>11</java.version>
-        <spring.boot.version>2.3.0.RELEASE</spring.boot.version>
+        <java.version>1.8</java.version>
         <gson-version>2.8.6</gson-version>
         <default.package>com.mastercard.developers.elevate.accelerator</default.package>
         <swagger-core-version>1.6.2</swagger-core-version>
@@ -25,17 +25,14 @@
         <apache.maven.plugins.version>3.0.0-M4</apache.maven.plugins.version>
         <jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
         <openapitools.version>5.1.0</openapitools.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sonar.coverage.jacoco.xmlReportPaths>
             ${project.build.directory}/site/jacoco-merged-test-coverage-report/jacoco.xml
         </sonar.coverage.jacoco.xmlReportPaths>
         <sonar.coverage.exclusions>
-            **/ElevateAcceleratorApplication.java,
-            **/com/mastercard/developers/elevate/accelerator/exception/*.java,
-            **/com/mastercard/developers/elevate/accelerator/util/*.java,
-            **/com/mastercard/developers/elevate/accelerator/configuration/*.java
+            **/ElevateAcceleratorDemoApplication.java
         </sonar.coverage.exclusions>
         <sonar.projectKey>Mastercard_elevate-reference-app</sonar.projectKey>
         <sonar.organization>mastercard</sonar.organization>
@@ -44,37 +41,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <version>${spring.boot.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-            <version>${spring.boot.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
-            <version>${spring.boot.version}</version>
-        </dependency>
-        <!-- Async logging -->
-        <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
             <version>${lmax.disruptor.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
@@ -116,25 +85,6 @@
             <artifactId>client-encryption</artifactId>
             <version>${client-encryption-version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-test-autoconfigure</artifactId>
-            <version>${spring.boot.version}</version>
-        </dependency>
-        <!-- Test Dependencies -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring.boot.version}</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -142,34 +92,31 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
             <version>${org.awaitility.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>openapi-generator-cli</artifactId>
+            <version>${openapitools.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring.boot.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${apache.maven.plugins.version}</version>
                 <configuration>
-                    <argLine>${surefire.jacoco.args} -Xmx1024m -XX:MaxPermSize=512m
-                        -Djdk.net.URLClassPath.disableClassPathURLCheck=true
-                    </argLine>
                     <useSystemClassLoader>true</useSystemClassLoader>
                     <useManifestOnlyJar>false</useManifestOnlyJar>
                     <threadCount>1</threadCount>
@@ -186,9 +133,6 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco-maven-plugin.version}</version>
-                <configuration>
-                <argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=512m</argLine>
-                </configuration>
                 <executions>
                     <execution>
                         <id>before-test-execution</id>
@@ -277,10 +221,7 @@
                                     <element>CLASS</element>
                                     <excludes>
                                         <exclude>${default.package}.generated.*</exclude>
-                                        <exclude>*ElevateAcceleratorApplication</exclude>
-                                        <exclude>com.mastercard.developers.elevate.accelerator.configuration.*</exclude>
-                                        <exclude>com.mastercard.developers.elevate.accelerator.exception.*</exclude>
-                                        <exclude>com.mastercard.developers.elevate.accelerator.util.*</exclude>
+                                        <exclude>*ElevateAcceleratorDemoApplication</exclude>
                                     </excludes>
                                     <limits>
                                         <limit>
